--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -1,6 +1,6 @@
 \chapter{Local Automatic Differentiation}
 \label{ch:LocalAD}
-This chapter will consider a different approach on how to use AD to solve PDEs. When solving PDEs using a finite volume method each cell will only depend on the neighbouring cells. In the \texttt{FAD} and \texttt{CJAD} implementations, the dependencies are stored in the discrete gradient and divergence operators. The implementations calculate the residual function value and corresponding Jacobian for the whole grid simultaneously by having a vector to store the values and sparse matrices for the Jacobians. Hence, when the discrete gradient and divergence operators are used in the calculation of the residual function in \autoref{ch:FlowSolver}, the Jacobian are obtained with the structure seen in \autoref{fig:flowSolverJacobian}. Local AD is an alternative approach that instead of calculating the residual function for all cells at once, using matrix and vector operations, iterates through the grid and for each cell calculates the local residual. In the end it will perform exactly the same calculations as \texttt{FAD} and \texttt{CJAD}, but instead of having large vector and matrix calculations, we now have smaller calculations concerning only one cell, and its neighbours, at the time. This new approach is based on the same idea as how AD is implemented in OPM \emph{\citep{OPM}}, which, as said in \autoref{ch:FlowSolver}, is written in C and C++ and scales better when the simulations become larger. It is hence interesting to see if you can write similar type of code in Julia and obtain better computational efficiency than what is achieved in MATLAB with MRST, as well as with the methods I have implemented in Julia.
+This chapter will consider a different approach on how to use AD to solve PDEs. When solving PDEs using a finite volume method each cell will only depend on the neighbouring cells. In the \texttt{FAD} and \texttt{CJAD} implementations, the dependencies are stored in the discrete gradient and divergence operators. The implementations calculate the residual function value and corresponding Jacobian for the whole grid simultaneously by having a vector to store the values and sparse matrices for the Jacobians. Hence, when the discrete gradient and divergence operators are used in the calculation of the residual function in \autoref{ch:FlowSolver}, the Jacobian are obtained with the structure seen in \autoref{fig:flowSolverJacobian}. Local AD is an alternative approach that instead of calculating the residual function for all cells at once, using matrix and vector operations, it iterates through the grid and for each cell calculates the local residual. In the end it will perform exactly the same calculations as \texttt{FAD} and \texttt{CJAD}, but instead of having large vector and matrix calculations, we now have smaller calculations concerning only one cell, and its neighbours, at the time. This new approach is based on the same idea as how AD is implemented in OPM \emph{\citep{OPM}}, which, as said in introduction, is written in C and C++. The AD tool in OPM scales better when the simulations become larger and is the reason why it is used when creating efficient industrial simulators. It is hence interesting to see if you can write similar type of code in Julia and obtain better computational efficiency than what is achieved in MATLAB with MRST, as well as the methods I have already implemented in Julia. If this is possible, Julia could be a language where both prototyping and industrial simulators can be created, making the development process much more efficient. 
 
 \section{Implementation}
 \label{sec:LADImplementation}
@@ -96,51 +96,51 @@ The table shows that the local AD approach is approximately six times faster tha
 
 \section{Two-Phase Incompressible Flow}
 \label{sec:TwoPhaseSimulation}
-Previously in this thesis I have only looked at single-phase flow, where the fluid present is oil. As explained in the introduction, only about 30\% of the oil in the reservoir will be extracted unless we create external forces to the reservoir. This normally consist of injecting either water, gas, or both, into the reservoir. As the purpose of this thesis is not oil recovery, but to see how the AD tools perform simulating oil recovery, I will not go deep into the physics of how it is done. More specific information about oil recovery can be found in \citet{lieMrstUrl}. Sufficient information for this example is that we want to simulate how water flows from an injector into a reservoir full of oil. This will be simulated for a grid from the 10th SPE Comparative Solution Project \emph{\citep{SPE10}}. This is a realistic grid created to benchmark simulators against each other.
+Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a subregion of Model 2 from the 10th SPE Comparative Solution Project \emph{\citep{SPE10}}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark upscaling methods against each other.
 
-The SPE10 (model 2) grid is split into 85 layers. Each layer contains 60$\times$220 cells, making the total number of grid cells 1 122 000. To simplify the implementation, I will only look at a single layer, layer 5, making the problem two-dimensional with 13 200 cells. In differ from the grid in \autoref{ch:FlowSolver}, the permeability and porosity varies throughout the grid. This will affect the path of the water flow. \autoref{fig:porositySPE10} shows the porosity in the grid and \autoref{fig:permeabilitySPE10} shows a logarithmic color plot of the permeability. Both figures also display the placement of the water injector in the center of the grid, and the four wells at each corner. \autoref{fig:porositySPE10} shows that the rock around well 3 and 4 are very dense (low porosity) and \autoref{fig:permeabilitySPE10} naturally shows that the permeability is also low in this area. This gives us an expectation that the water will flow to the left.
+The SPE10 (Model 2) grid is split into 85 layers. Each layer contains 60$\times$220 cells, making the total number of grid cells 1 122 000. To simplify the implementation, I will only look at a single layer, layer 5, making the problem two-dimensional with 13 200 cells. In differs from the grid in \autoref{ch:FlowSolver} in that the permeability and porosity varies throughout the grid. This will affect the path of the water flow. \autoref{fig:porositySPE10} shows the porosity in the grid and \autoref{fig:permeabilitySPE10} shows a logarithmic color plot of the permeability. Both figures also display the placement of the water injector in the center of the grid, and the four wells at each corner. \autoref{fig:porositySPE10} shows that the rock around wells P3 and P4 are very dense (low porosity) and \autoref{fig:permeabilitySPE10} naturally shows that the permeability is also low in this area. This gives us an expectation that the injected water will primarily flow to the left.
 \begin{figure}[H]
     \centering
-    \includegraphics[width = \textwidth]{figures/porositySPE10.eps}
+    \includegraphics[width = \textwidth,clip=true,trim=20 130 10 90]{figures/porositySPE10.eps}
     \caption{Color plot of the porosity in the SPE10 grid.}
     \label{fig:porositySPE10}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width = \textwidth]{figures/permeabilitySPE10.eps}
+    \includegraphics[width = \textwidth,clip=true,trim=20 120 10 90]{figures/permeabilitySPE10.eps}
     \caption{Logarithmic color plot of the permeability in the SPE10 grid.}
     \label{fig:permeabilitySPE10}
 \end{figure}
-\todo[inline]{Fjerne hvite kanter}
-\subsection{Derivation of Governing Equations for Two Phase Flow}
-The governing equations for a two-phase flow are similar to the ones expressed in \autoref{ch:FlowSolver}, with some modifications. I will also make some simplifications to the model that I will note in the following derivation. Darcy's law, expressing the flux between two cells are given in \myeqref{eq:pressSolverDarcy}, but since our grid only has one layer, we neglect the gravity, and Darcy's law becomes
+
+\subsection{Derivation of the Governing Equations for Two-Phase Flow}
+The governing equations for a two-phase flow are similar to the ones expressed in \autoref{ch:FlowSolver}, with some modifications. I will also make some simplifications to the model that I will note in the following derivation. Darcy's law, expressing the volumetric flow rate of a single-phase fluid, is given in \myeqref{eq:pressSolverDarcy}, but since our grid only has one layer, we neglect the gravity, and Darcy's law becomes
 \begin{equation*}
     \textbf{v} = - \frac{K}{\mu}\nabla p.
     \label{eq:DarcyNoGravity}
 \end{equation*}
-However, now we need to separate between flux of water, flux of oil and the sum of them, total flux. Before injection of water, each cell is filled with pure oil. This implies that the amount of oil in a cell equals the pore volume in that cell. The pore volume is found by multiplying the total volume of the cell with the porosity, a number between zero and one. The amount of water and oil in a cell, called the saturation, is measured similarly as the porosity with the condition
+However, now we need to separate between the flow of water, flow of oil and their overall flow. Before injection of water, each cell is only filled with oil. This implies that the amount of oil in a cell equals the pore volume in that cell. The pore volume is found by multiplying the total volume of the cell with the porosity, a number between zero and one. The volumetric fractions of water and oil, called the saturation, are defined similarly as the porosity as pointwise quantities, subject to the condition
 \begin{equation*}
-\sum_\alpha S_\alpha = 1.
+\sum_\alpha S_\alpha = 1
 \end{equation*}
-In this two phase situation $\alpha$ can be either $o$ for oil or $w$ for water. As an example, in a cell without water, the oil saturation will be $S_o = 1$ and water saturation $S_w = 0$.  Since the permeability of a cell depends on the fluid flowing through the cell, we cannot find the phase flux by simply multiplying Darcy's law with the saturation. To get an expression for the phase flux, we introduce the property relative permeability. Relative permeability is usually represented as an analytic function, and I have chosen to use one of the simplest commonly used approximations, given by
+stating that the fluids fully occupy the available pore volume. In this two-phase situation, subscript $\alpha$ refers to the phase and can be either $o$ for oil or $w$ for water. As an example, in a cell without water, the oil saturation will be $S_o = 1$ and water saturation $S_w = 0$.  The effective permeability a fluid phase experiences when flowing through a medium partially occupied by another mobile fluid phase can be significantly lower than if the phase flows alone. The reduction is generally not linear in $S$ and hence we cannot find the phase flux by simply multiplying Darcy's law with the saturation. To get an expression for the phase flux, we introduce the property relative permeability. Relative permeability is often represented as a tabulated quantity, but herein I have chosen to use one of the simplest commonly used analytic models, given by
 \begin{equation*}
 k_{r\alpha} = S_\alpha^2,
 \end{equation*}
-for both water and oil. The flux for a given phase is then given by the modified Darcy's law
+for both water and oil. The flux for phase $\alpha$ is then given by the modified Darcy's law
 \begin{equation*}
 \textbf{v}_\alpha = - \frac{Kk_{r\alpha}}{\mu_\alpha}\nabla p_\alpha = -K\lambda_\alpha\nabla p_\alpha.
 \end{equation*}
-$p_\alpha$ is the pressure for the given phase and $\lambda_\alpha$ is called the mobility of phase $\alpha$. The difference between the oil pressure and the water pressure, is given by the capillary pressure, $p_c = p_o - p_w$. For oil and water, the capillary pressure would cause the water to rise in the reservoir. However, in this model we neglect capillary pressure and the oil- and water pressure are considered to be equal. Now that we have an expression for the phase flux, we obtain the conservation equation for each phase:
+Here, $p_\alpha$ is the pressure for the given phase and $\lambda_\alpha$ is called the mobility of phase $\alpha$. The difference between oil and water pressure is given by the capillary pressure, $p_c = p_o - p_w$. For an oil--water system, the capillary pressure would cause water to rise in the reservoir. However, in this model we neglect capillary pressure so that the oil- and water pressures are considered to be equal. Now that we have an expression for the phase flux, we obtain the conservation equation for each phase:
 \begin{equation}
     \frac{\partial}{\partial t}(\phi \rho_\alpha S_\alpha) + \nabla\cdot(\rho_\alpha\textbf{v}_\alpha) = \rho_\alpha q_\alpha.
     \label{eq:continuityEqMultiPhase}
 \end{equation}
-If you remove $\alpha$ from \myeqref{eq:continuityEqMultiPhase}, it becomes the same equation as \myeqref{eq:continuityEqPressure}, except that in \myeqref{eq:continuityEqPressure}, $\rho$ is inside of the source term $q$. In our two phase example we assume both phases to be incompressible such that the governing equations are given by
+If you remove $\alpha$ from \myeqref{eq:continuityEqMultiPhase}, it becomes the same equation as \myeqref{eq:continuityEqPressure}, except that in \myeqref{eq:continuityEqPressure}, $\rho$ is inside of the source term $q$. In our two-phase example we assume both phases to be incompressible such that the governing equations are given by
 \begin{equation}
     \frac{\partial}{\partial t}(\phi S_\alpha) + \nabla\cdot\textbf{v}_\alpha =  q_\alpha, \hspace{1em} \alpha \in o, w.
     \label{eq:continuityEqsMultiPhaseIncomp}
 \end{equation}
-Since $S_o = 1 - S_w$, the equations from \myeqref{eq:continuityEqsMultiPhaseIncomp} contain only two unknown variables, the saturation, for either water or oil, and the pressure. This means that we have enough equations to solve for the unknown variables and we could solve them simultaneously. However, the equations are strongly coupled, and for this example I will rather obtain two equations, one describing the pressure, and one describing the water saturation, such that they are less coupled. This gives us the opportunity to solve the equations separately using an operator splitting method I will explain later. We start by obtaining an equation for the pressure. By adding the two equations from \myeqref{eq:continuityEqsMultiPhaseIncomp} we obtain
+Since $S_o = 1 - S_w$, the equations from \myeqref{eq:continuityEqsMultiPhaseIncomp} contain only two unknown variables, the saturation, for either water or oil, and the pressure. This means that we have enough equations to solve for the unknown variables and we could solve them simultaneously. However, the equations are strongly coupled, and for this example we will rather reformulate the two equations as an elliptic equation describing the pressure and a hyperbolic equation describing the water saturation, since these reformulated equations are less coupled. This gives us the opportunity to solve the equations separately using an operator splitting method I will explain later. We start by obtaining an equation for the pressure. By adding the two equations from \myeqref{eq:continuityEqsMultiPhaseIncomp} we obtain
 \begin{equation*}
     \phi \frac{\partial}{\partial t}(S_o + S_w) + \nabla\cdot(\textbf{v}_o + \textbf{v}_w) = q_o + q_w.
 \end{equation*}
@@ -153,11 +153,10 @@ and the total source term as $q = q_o + q_w$, we obtain the pressure equation:
     -\nabla\cdot(K\lambda\nabla p) = q.
     \label{eq:pressureEq}
 \end{equation}
-Next we derive the equation for the water saturation. \myeqref{eq:continuityEqsMultiPhaseIncomp} with $\alpha = w$ gives one formulation, but we want an expression that depend on the total flux, and not the water flux. The reason for this will be explained later. To find a relation between the water flux and the total flux, observe that the difference between the water flux, multiplied with the mobility of oil, and the oil flux, multiplied with the mobility of water, is equal to zero.
+Next, we derive the equation for the water saturation. \myeqref{eq:continuityEqsMultiPhaseIncomp} with $\alpha = w$ gives one formulation, but we want an expression that depends on the total flux, and not the water flux. The reason for this will be explained later. To find a relation between the water flux and the total flux, observe that the difference between the water flux, multiplied with the mobility of oil, and the oil flux, multiplied with the mobility of water, is equal to zero.
 \begin{align*}
     \lambda_o\textbf{v}_w - \lambda_w \textbf{v}_o = \lambda\textbf{v}_w - \lambda_w\textbf{v} &= (\lambda_o + \lambda_w)\textbf{v}_w - \lambda_w(\textbf{v}_o + \textbf{v}_w) \\
-    &= \left(\lambda_o\lambda_w + \lambda_w^2 - (\lambda_w^2 + \lambda_w\lambda_o)\right)\left(-K\nabla p\right)\\
-    &= 0
+    &= \left(\lambda_o\lambda_w + \lambda_w^2 - (\lambda_w^2 + \lambda_w\lambda_o)\right)\left(-K\nabla p\right) = 0.
 \end{align*}
 This gives us the relation 
 \begin{equation*}
@@ -168,24 +167,24 @@ where $f_w$ is called the fractional water flow. Inserting the expression for wa
     \phi \frac{\partial S_w}{\partial t} + \nabla\cdot\left(f_w\textbf{v}\right) =  q_w.
     \label{eq:transportEq}
 \end{equation}
-Even though we now have separated the governing equations into a pressure equation and a transport equation, they are still coupled. \myeqref{eq:pressureEq} is depending on the water saturation in the total mobility $\lambda$ and \myeqref{eq:transportEq} is depending on the pressure in Darcy's law for the flux, \textbf{v}. However, this coupling is smaller than in \myeqref{eq:continuityEqsMultiPhaseIncomp}, and this weaker coupling opens up the opportunity to use an operator splitting method. This consist of first solving the pressure equation, holding the saturation constant. Then when we have found the correct pressure for this time step, we hold the pressure and the total flux constant, and solve the transport equation. Since the total flux is held constant as well, when solving the transport equation, the total flux calculated in the pressure equation can be used to solve the transport equation. This is why we wanted find an expression for the water flux, given by the total flux. When the water saturation is updated, the pressure equation is again solved with constant saturation, and so on.
+Even though we now have separated the governing equations into a pressure equation and a transport equation, they are still coupled. \myeqref{eq:pressureEq} is depending on the water saturation in the total mobility $\lambda$ and \myeqref{eq:transportEq} is depending on the pressure in Darcy's law for the flux, \textbf{v}. However, this coupling is weaker than in \myeqref{eq:continuityEqsMultiPhaseIncomp}, and this weaker coupling opens up the opportunity to use an operator splitting method. This consist of first solving the pressure equation, holding the saturation constant. Then, when we have found the correct pressure, we hold the pressure and the total flux constant for a (short) time step and solve the transport equation. Since the total flux is held constant as well when solving the transport equation, the total flux calculated in the pressure equation can be used to solve the transport equation. This is why we wanted to find an expression for the water flux, given by the total flux. When the water saturation is updated, we continue with the next time step by solving the pressure equation for constant saturation, and so on.
 
-\subsection{Implementation of Two Phase Solver}
-In the implementation of the two-phase simulator for the SPE10 grid, a lot will be very similar as for the previous single-phase implementation from \autoref{sec:FlowSolverLADImplementation}. The \texttt{FlowSystem} struct is replaced with a \texttt{TwoPhaseSystem} struct, that hold the residuals and Jacobians for both equations. In addition to this, for implementation convenience purposes, it also hold the current pressure and water saturation:
+\subsection{Implementation of a Two-Phase Solver}
+In the implementation of the two-phase simulator for the SPE10 grid, a lot will be very similar as for the previous single-phase implementation from \autoref{sec:FlowSolverLADImplementation}. The \texttt{FlowSystem} struct is replaced with a \texttt{TwoPhaseSystem} struct that hold the residuals and Jacobians for both equations. In addition to this, for implementation convenience purposes, it also holds the current pressure and water saturation:
 \lstinputlisting{code/TwoPhasSystem.jl}
-Naturally, instead of having a single assemble equations function, the simulator now has two. These are called \texttt{assemblePressureEquations!()} and \texttt{assembleTransportEquations!()}. These are implemented with the same structure as \texttt{assembleFlowSystem!()}, only that the equations calculated are different. The main loop that controls the simulation is also extended. As explained above, the pressure equation and the transport equation are solved interchangeably and the implementation of this can be seen below.
+Naturally, instead of having a single function to assemble equations, the simulator now has two, called \texttt{assemblePressureEquations!()} and \texttt{assembleTransportEquations!()}. These are implemented with the same structure as \texttt{assembleFlowSystem!()}, only that the equations calculated are different. The main loop that controls the simulation is also extended. As explained above, the pressure equation and the transport equation are solved interchangeably and the implementation of this can be seen below.
 \lstinputlisting{code/TwoPhaseSimulator.jl}
 
 \subsection{Two-Phase Solver Results}
-Even though we are most interested to see how the AD tools perform, we also have to see what we are simulating to make sure that it is correct implemented. \autoref{fig:waterSatResultsSPE10} shows the development of the water saturation in the SPE10 grid, for a simulation over three years. The total amount of water we have injected after three years is 0.135 of the total pore volume in the reservoir. As we can see from the figure, the assumption we had that the water will flow to the left was correct. We can also see that it follows paths in the reservoir that are optimal for the water to flow. One example that is easy to spot, is that the water, at least in the beginning, avoids the area straight left of the injector. If we go back to \autoref{fig:porositySPE10} and \autoref{fig:permeabilitySPE10}, we can see that in this area, both the porosity and the permeability is low.
-\begin{figure}[htb]
+Even though we are most interested to see how the AD tools perform, we also have to see what we are simulating to make sure that it is correct implemented. \autoref{fig:waterSatResultsSPE10} shows the development of the water saturation in the SPE10 grid, for a simulation over three years. The total amount of water we have injected after three years is 0.135 of the total pore volume in the reservoir. As we can see from the figure, the assumption we had that the water will flow to the left was correct. We can also see that it follows paths in the reservoir that are optimal for the water to flow. One example that is easy to spot, is that the water, at least in the beginning, avoids the area straight left of the injector. If we go back to \autoref{fig:porositySPE10} and \autoref{fig:permeabilitySPE10}, we can see that in this area, both the porosity and the permeability are low.
+\begin{figure}
     \centering
-    \includegraphics[width = \textwidth]{figures/waterSaturation4x1ThreeYears.eps}
+    \includegraphics[width = .8\textwidth,clip=true, trim=100 30 100 10]{figures/waterSaturation4x1ThreeYears.eps}
     \caption{Color plot of the water saturation development in the SPE10 grid over a period of three years. Total injected water after three years is 13.5\% of the total pore volume in the reservoir.}
     \label{fig:waterSatResultsSPE10}
 \end{figure}
-\todo[inline]{Gjøre plottene større og med mindre svarte kanter}
-To benchmark the AD performance in the two-phase simulation I have, similar to the previous benchmarks, separated the AD calculations from the linear solver. The simulation in \autoref{fig:waterSatResultsSPE10} used approximately 150 time steps and for each time step, the Newton-Raphson method used two iterations to solve the pressure equations and approximately six iterations to solve the transport equations. The benchmark I have performed is essentially this same simulation, but without the linear solver and the update of the pressure and the water saturation. This will give us a good estimation on how much time the simulator spend on AD during the simulation. Since the benchmark does not update the pressure and water saturation, it could have been the case that the compiler figure out that there is no need to perform all calculations, and that it for example is enough doing it only once. However, this is tested and it is not the case. The benchmark is performed for the local AD method, the \texttt{CJAD} method and for the AD tool in MRST. The results of the benchmark can be seen in \autoref{tab:TwoPhaseBenchmark}. The table shows that \texttt{CJAD} and MRST perform similar, with about 30 seconds in total. The local AD outperforms both the two other methods, and for this benchmark, it is about six times as fast.
+\todo[inline]{Gjøre plottene større og med mindre svarte kanter. Gjøres enkelt ved å sette 'edgeColor','none' som ekstra argument til plotCellData}
+To benchmark the AD performance in the two-phase simulation, I have, similar to the previous benchmarks, separated the AD calculations from the linear solver. The simulation in \autoref{fig:waterSatResultsSPE10} used approximately 150 time steps, and for each time step, the Newton--Raphson method used two iterations to solve the pressure equations and approximately six iterations to solve the transport equations. The benchmark I have performed is essentially this same simulation, but without the linear solver and the update of the pressure and the water saturation. This will give us a good estimation on how much time the simulator spend on AD during the simulation. Since the benchmark does not update the pressure and water saturation, it could have been the case that the compiler figure out that there is no need to perform all calculations, and that it for example is enough doing it only once. However, this is tested and it is not the case. The benchmark is performed for the local AD method, the \texttt{CJAD} method and for the AD tool in MRST. The results of the benchmark can be seen in \autoref{tab:TwoPhaseBenchmark}. The table shows that \texttt{CJAD} and MRST perform similar, with approximately 30 seconds in total. The local AD outperforms both the two other methods, and for this benchmark, it is approximately five times as fast.
 \begin{table}[htb]
     \centering
     \caption{Write caption}
