--- a/07_conclusion_and_future_work.tex
+++ b/07_conclusion_and_future_work.tex
@@ -1,9 +1,11 @@
 \chapter{Conclusion and Future Work}
 \label{ch:Conclusion}
-This project report consisted of discussing the difference in method and advantages between forward and backward Automatic Differentiation (AD), the applications of AD, and implementation of forward AD in Julia. The implementation has been benchmarked against other AD libraries. Finally, an example where AD is used in a real world example for solving partial differential equations (PDEs) that describe the flow inside an oil reservoir has been provided.
+This thesis has investigated the possibility of using the new programming language, Julia, as a language both for implementing prototypes of new oil reservoir simulators as well as building efficient industrial simulators. The process of creating an industrial simulator usually consist of first creating a prototype that is further developed to be an industrial simulator. In SINTEF's approach, the prototype and the finished simulator is implemented in two different languages. A high-level scripting language for the prototype and a lower-level, compiled language for the finished simulator. The possibility of performing the whole implementation process in Julia may contribute to increase the efficiency of developing new computational tools significantly.
 
-My implementation of forward AD in Julia (\textit{ForwardAutoDiff}) performs well in the benchmark for evaluating the value and the Jacobian of a standard vector function with three vector inputs. For vectors of lengths less than 1000, but more than 50, \autoref{fig:benchmarkLongVectors} and \autoref{fig:benchmarkAllADs} show that it is the fastest implementation tested. It is interesting to see in the benchmarking (\autoref{fig:benchmarkADInLoop}) that there is an opportunity to gain computational efficiency by using for-loops in Julia. Currently, \textit{ForwardAutoDiff} is implemented similarly as the one in MATLAB, using vectorization. MATLAB has the limitation of having a lot of overhead if you use for-loops -- since Julia does not have this limitation, it would be interesting to look further into different implementations of AD in Julia to see if it is possible to make a more efficient implementation by a more extensive use of for-loops. \autoref{fig:benchmarkAllADs} shows that the built-in AD implementation in Julia (\textit{ForwardDiff}) has very little overhead for small vectors, but scales badly as the size of the vectors increase. Even though it scales badly for long vectors, considering the low overhead for small problems, an interesting approach would be to use this library as a building brick of a new implementation of \textit{ForwardAutoDiff}. Since Julia has proven itself to have little overhead when using for-loops, this may lead to a better implementation of \textit{ForwardAutoDiff} in Julia.
+To investigate this, the thesis has looked further into solving PDEs that describe flow in porous media, using Automatic Differentiation (AD) and a finite-volume method. The PDEs are solved by discretizing the divergence and gradient operators such that the discrete equations can be implemented very similar to the continuous. By setting up the equations as a function on residual form, the system can be solved using AD to obtain the Jacobian of the system and the Newton-Raphson method to find the roots of the function. The focus of the thesis has been to look at the performance of the AD tools. Three new AD implementations in Julia have been presented and compared to a third-party implementation in Julia and AD tools from MRST, a reservoir simulation toolbox created in MATLAB by the Computational Geosciences group in the department of Mathematics and Cybernetics at SINTEF Digital\emph{\citep{mrstHomepage}}. 
 
-For PDEs it has been demonstrated that by introducing discrete divergence and gradient operators we can solve the PDEs describing the flow of oil in a reservoir elegantly by using a finite volume method and AD. Using these operators we can write the discrete equations on a very similar form as the continuous. By setting up the equations as a function on residual form, we can solve it by using AD and the Newton-Raphson method to find the roots of the function. For the real world example in \autoref{ch:FlowSolver}, the AD implementation in MATLAB solves the problem quicker than the implementation in Julia for all discretizations tested. The discretization with fewest cells gives a system of 1002 equations. So even though \textit{ForwardAutoDiff} was the fastest at evaluating a vector function (\autoref{fig:benchmarkAllADs}) for this length, it is still slower at solving the example. This indicates that when the function evaluated becomes more complex, and the Jacobian less sparse and diagonal, the AD tool in MATLAB handles it better than \textit{ForwardAutoDiff}. Hence it would be interesting to see if, with new implementations, either with less vectorization or with using \textit{ForwardDiff} as a building brick, the computational efficency of the flow solver example or other real world examples can be improved by using Julia.
+The AD libraries are benchmarked in a prototype of a single-phase flow solver, simulating primary production from a reservoir with one well producing oil. The third-party implementation of AD, with its dense matrix structure, proved useless for calculating the sparse Jacobians that correspond to the residual functions. For this simulation, it is more than 30 times slower than the other AD tools and it is not further considered after this result. The two first implementations in Julia are called \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). These are high-level AD tools that are easy to use and that are based on the implementation in MRST. \texttt{CJAD} is an extension of \texttt{FAD}, as where \texttt{FAD} only uses sparse matrix structure for its Jacobians, \texttt{CJAD} makes optimized calculations when the Jacobian is diagonal, identity, or null. For the single-phase simulation \texttt{CJAD} and MRST perform similar, while \texttt{FAD} is approximately twice as slow. 
 
-% This investigation would also consist of testing the implementations further for different types of functions that gives different structures to the Jacobians
+The last AD tool in Julia is called local AD and is implemented as a motivation from the properties of the single-phase simulation. It is similar to how AD is implemented in OPM \emph{\citep{OPM}}, which is written in C and C++. Hence, local AD is a lower-level implementation than \texttt{FAD} and \texttt{CJAD}, and since OPM is the tool SINTEF recommends for creating efficient industrial simulators, it is expected that this will give an improved performance. For the single-phase solver, local AD is approximately six times faster than \texttt{CJAD} and MRST. To further test the abilities of local AD, a second simulator is implemented. This is a two-phase solver, simulating the flow of water, in a single layer of the SPE10 reservoir \emph{\citep{SPE10}}, when injecting water into the centre of the reservoir. For this simulation, \texttt{CJAD} and MRST still perform similarly, and the local AD method is approximately five times as fast.
+
+The implementation and benchmarking of \texttt{CJAD} indicate that Julia is well suited for making quick prototypes of simulators, and the benchmarks of local AD give good indications that it could also be possible to create efficient industrial simulators for oil recovery. However, our implementation has not been tested on a full realistic simulation model or for grid with more than 15 000 cells. As a reference, the full SPE10 grid has 1 122 000 cells. A natural next step in testing Julia is to make an implementation like local AD in MATLAB and compare the two languages. Since local AD depends on fast execution of for-loops, it is not expected that MATLAB will manage to execute local AD efficient, but it is a good test to see if Julia actually is a step forward compared to MATLAB. A final investigation will be to confirm whether Julia can match the computational efficiency of OPM, or other industrial simulators, in a full-scale realistic simulation. 
