--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -296,10 +296,16 @@ eprint = {
     year = {2016},
     note = {Accessed 21.05.2019}
 }
-@misc{SPE10,
-    key = {SPE10},
-    url = {https://www.sintef.no/projectweb/geoscale/results/msmfem/spe10/},
-    urldate = {2019-05-21},
-    year = {n.d.},
-    note = {Accessed 21.05.2019}
+
+@article{SPE10,
+  author =	 {Christie, M.A. and Blunt, M.J.},
+  title =	 {Tenth SPE Comparative Solution Project: A Comparison of Upscaling
+                  Techniques},
+  journal =	 {SPE Reservoir Evaluation {\&} Engineering},
+  year =	 2001,
+  volume =	 4,
+  number =	 04,
+  pages =	 {308--317},
+  doi =		 {10.2118/72469-PA},
+  publisher =	 {Society of Petroleum Engineers}
 }
